# tinf22it1_microservices

./: .gitignore  GitVersion.yml  docker-compose.yml  openapi.yml
.github/workflows/: docker-build-push.yml
ansible/: README.md  build.sh  deploy.sh  inventory.ini  playbook.yml
ansible/templates/: api-appsettings.json.j2  keycloak.service.j2  nginx-thesismanager.conf.j2  notification-appsettings.json.j2  setup-appsettings.json.j2  thesismanager-api.service.j2  thesismanager-notification.service.j2
api/internal/: notitcation_service.yml
api/public/: combined.yml  common.yml  theses.yml  users.yml
database/: db.sql  exampleDB.sql
docs/CrossCuttingConcerns/: Configuration.md  Frontend.md  README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
keycloak/: thesis-management-realm.json  thesis-management-users-0.json
notification_service/: setup.py
notification_service/swagger_server/: __main__.py
services/thesis-service/: .env  Cargo.toml  README.md
services/thesis-service/dbschema/: test.sql
services/thesis-service/migrations/2025-02-21-090301_create_tables/: down.sql  up.sql
services/thesis-service/src/: main.rs  models.rs  result.rs
services/thesis-service/src/database/: convert.rs  mod.rs  models.rs  schema.rs
services/thesis-service/src/routes/: mod.rs
services/user-service/: Cargo.toml
services/user-service/src/: main.rs  models.rs  result.rs  routes.rs
services/user-service/src/keycloak_extension/: convert.rs  error.rs  mod.rs  user.rs
smtp4dev_example/: README.md  docker-compose.yml  notificationServiceOpenapi.yaml  smtp_example.py
smtp4dev_example/python-flask-server-generated/: setup.py
src/dotnet/: Dhbw.ThesisManager.sln  (+2 more)
thesis_server_python/: Dockerfile  requirements.txt  setup.py
(+181 files in other folders)
