[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["catch-panic"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
iso8601 = { version = "0.6", features = ["chrono"] }
# Might be useful: validator = "0.20"


# Database
diesel = { version = "2", features = ["postgres", "r2d2"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Configuration
envconfig = "0.11"

# For development/testing: Load envvars from .env file
dotenv = "0.15"
