[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = {version = "0.8.1", features = ["macros"]}
chrono = "0.4.39"
envconfig = "0.11.0"
serde = {version = "1.0.218", features = ["derive"]}
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
